# volumio-buddy

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  SECURITY.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties  volumio-buddy-buttons.py  volumio-buddy-display.py  volumio-buddy-tiny.py  volumio-buddy.py  volumio.ppm
.github/workflows/: python-package.yml
examples/: client.py  display.py  modal.py  rgbled.py  rotary_encoder.py  scroll.py  toggle_play.py  twolinemodal.py  volume.py  volumio_logo.ppm
src/: vbuddy  vbuddy.service
src/vb3/: __init__.py  battery.py  display.py  gpio.py  network.py  util.py  volumio_client.py
tests/: __init__.py  context.py  test_battery.py  test_display.py  test_gpio.py  test_volumio_client.py
tests/volumio_buddy/: __init__.py  test_volumio_buddy.py
volumio_buddy/: volumio_buddy.py
