[metadata]
name = volumio-buddy
version = 3.0.3
author = Michiel Fokke
author_email = michiel@fokke.org
description = Hardware add-ons integration for Volumio 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxey/volumio-buddy
project_urls =
    Bug Tracker=https://github.com/foxey/volumio-buddy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Topic :: Multimedia :: Sound/Audio
    Topic :: System :: Hardware
keywords = Volumio, Volumio3, GPIO, SSD1306, OLED, Rotary Encoder, SocketIO

[options]
package_dir = =src
packages = find:
scripts = src/vbuddy
setup_requires = wheel
tests_require =
    pytest
    pytest-aio
install_requires =
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-ina219
    RPi.GPIO
    python-socketio[asyncio_client]>=4,<5
    pillow
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
vb3 =
    *.ttf
    *.ppm

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
